...
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_top"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/value_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Jacob West"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:background="@android:color/transparent"
...
